# bts

./: Cargo.toml  README.md  TODO.md
examples/: agg_trailing_stop.rs  ema_macd_parameter_optimization_par.rs  ema_parameter_optimization.rs  envelop_strategy.rs  macd_ema.rs  par_parameters_optimization.rs  parameter_optimization.rs  take_profit_and_stop_loss.rs  trailing_stop.rs  utils.rs
src/: draws.rs  engine.rs  errors.rs  lib.rs  main.rs  metrics.rs  optimizer.rs  plot.rs  utils.rs
src/engine/: bt.rs  bts.rs  candle.rs  mod.rs  order.rs  position.rs  wallet.rs
