[package]
name = "btc"
version = "0.1.0"
edition = "2024"

[dependencies]
ta = "0.5.0"
anyhow = "1.0.100"
plotters = "0.3.7"
serde_json = "1.0.145"

chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.226", features = ["derive"] }
serde-this-or-that = { version = "0.5.0", features = ["derive"] }
