[package]
name = "bts"
version = "0.3.0"
edition = "2024"
description = "Backtest your trading strategy."
authors = ["tetuaoro <65575727+tetuaoro@users.noreply.github.com>"]

[dependencies]
rand = "0.9.2"
thiserror = "2.0.17"
chrono = { version = "0.4.42" }

serde_json = { version = "1.0.145", optional = true }
serde = { version = "1.0.226", features = ["derive"], optional = true }
serde-this-or-that = { version = "0.5.0", features = [
    "derive",
], optional = true }

[features]
serde = [
    "chrono/serde",
    "dep:serde",
    "dep:serde_json",
    "dep:serde-this-or-that",
]

[dev-dependencies]
ta = "0.5.0"
anyhow = "1.0.100"
rayon = "1.11.0"

[[example]]
name = "ts"
path = "examples/trailing_stop.rs"

[[example]]
name = "tpsl"
path = "examples/take_profit_and_stop_loss.rs"

[[example]]
name = "emaopt"
path = "examples/ema_parameter_optimization.rs"

[[example]]
name = "emacdopt"
path = "examples/ema_macd_parameter_optimization_par.rs"
